# matlab-beautifier

./: Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: release.yml
app/: Cargo.toml  build.rs
app/src/: main.rs
lib/: Cargo.toml
lib/src/: beautifier.rs
lib/tests/: formatter.rs
lib/tests/fixtures/: arguments_block.m  assignment.m  binary_operators.m  boolean_operators.m  class_definition.m  command.m  comment.m  field_expression.m  for_statement.m  function_call.m  function_definition.m  global_persistent.m  if_statement.m  lambda.m  line_continuation.m  matrix_cell.m  operators.m  property_name.m  range.m  spmd_statement.m  switch_statement.m  try_statement.m  while_statement.m
src/: args.rs  beautifier.rs  main.rs
