[package]
name = "matlab-beautifier"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chardetng = "0.1.17"
clap = { version = "4.1.13", features = ["derive", "env"] }
colored = "2.0.0"
encoding_rs = "0.8.32"
tree-sitter = "~0.20.10"
tree-sitter-matlab = { git = "https://github.com/acristoffers/tree-sitter-matlab" }

[build-dependencies]
cc = "1.0"
clap = { version = "4.1.13", features = ["derive", "env"] }
clap_complete = "4.1.5"
clap_mangen = "0.2.10"
fs_extra = "1.3.0"

[[bin]]
name = "matlab-beautifier"
path = "src/main.rs"
