[package]
name = "matlab-beautifier"
version = "1.0.0"
edition = "2021"

[dependencies]
matlab_beautifier = { path = "../lib" }
anyhow = "1.0.75"
chardetng = "0.1.17"
clap = { version = "4.3.23", features = ["derive", "env"] }
colored = "2.0.4"
encoding_rs = "0.8.32"

[build-dependencies]
clap = { version = "4.3.23", features = ["derive", "env"] }
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
fs_extra = "1.3.0"

[[bin]]
name = "matlab-beautifier"
path = "src/main.rs"
