[package]
name = "matlab-beautifier"
version = "1.0.0"
edition = "2021"

[dependencies]
matlab_beautifier = { path = "../lib" }
anyhow = "1.0.98"
chardetng = "0.1.17"
clap = { version = "4.5.41", features = ["derive", "env"] }
colored = "3.0.0"
encoding_rs = "0.8.35"

[build-dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
clap_complete = "4.5.55"
clap_mangen = "0.2.28"
fs_extra = "1.3.0"

[[bin]]
name = "matlab-beautifier"
path = "src/main.rs"
