[package]
name = "matlab_beautifier"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "env"] }
tree-sitter = "~0.20.10"
tree-sitter-matlab = { git = "https://github.com/acristoffers/tree-sitter-matlab" }

[build-dependencies]
cc = "1.0"

[lib]
name = "matlab_beautifier"
path = "src/lib.rs"
