[package]
name = "matlab_beautifier"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive", "env"] }
tree-sitter = ">=0.21.0"
tree-sitter-matlab = { git = "https://github.com/acristoffers/tree-sitter-matlab" }

[build-dependencies]
cc = "1.1"

[lib]
name = "matlab_beautifier"
path = "src/lib.rs"
